Fix some spacing in CSS

--- a/app/src/main/assets/fpstyle.css
+++ b/app/src/main/assets/fpstyle.css
@@ -204,6 +204,7 @@ table#threads tr.threadlisthead td {
 
 #above_postlist {
     margin-bottom: 0px !important;
+    display: none;
 }
 
 #below_threadlist {
